[project]
name = "migra-workspace"
version = "0.0.0"
requires-python = ">=3.10"
authors = [{ name = "Roshan Pawar", email = "roshan@r614.dev" }]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "psycopg[binary]",
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E721"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = ["packages/migra/tests/**"]

[tool.pytest.ini_options]
testpaths = ["packages/migra/tests"]
